# euler-solutions

./: Cargo.toml  README.md
primes/: Cargo.toml
primes/src/: lib.rs
src/: lib.rs  main.rs
src/solutions/: mod.rs  problem001.rs  problem002.rs  problem003.rs  problem049.rs  problem050.rs  problem051.rs
